--- a/index.html
+++ b/index.html
@@ -9,85 +9,107 @@
   <body>
     <div id="exercise1">
       <!-- Complete Exercise 1 HERE -->
+      <h1>Ashlyn Carmosino</h1>
+      <p>
+        This is a paragraph about me. I am enjoy painting, photography and most
+        things in art. I also enjoy being outdoors and currently live in Florida
+        for the winter.
+      </p>
     </div>
 
     <div id="exercise2">
       <!-- Complete Exercise 2 HERE -->
+      <ul>
+        <li>
+          <a href="https://www.linkedin.com/in/ashlyn-carmosino-b5a3471b8"
+            >LinkedIN</a
+          >
+        </li>
+        <li>
+          <a href="https://portal.truecoders.io/course/50/lecture/69/exercise"
+            >TrueCoders</a
+          >
+        </li>
+        <li>
+          <a href="https://www.google.com/">Google</a>
+        </li>
+      </ul>
     </div>
 
     <div id="exercise3">
       <!-- Complete Exercise 3 HERE -->
+      <img src="./images/example.png" alt="given photo" />
     </div>
 
     <div id="exercise4">
       <!-- Complete Exercise 4 HERE -->
       <p>
-        I looked down at the board. "The point isn't to win?" I asked. "The
-        point," Bredon said grandly, "is to play a beautiful game." He lifted
-        his hands and shrugged, his face breaking into a beautific smile. "Why
-        would I want to win anything other than a beautiful game?"
+        I looked down at the board. "The <strong>point</strong> isn't to win?" I
+        asked. "The <strong>point</strong> ," <span>Bredon</span> said grandly,
+        "is to <u>play</u> a <em>beautiful</em> game." He lifted his hands and
+        shrugged, his face breaking into a beautific smile. "Why would I want to
+        win anything other than a <em>beautiful</em> game?"
       </p>
     </div>
+    <!-- option shift f will enact prettier to make the code look good-->
 
     <div id="exercise5">
       <!-- Complete Exercise 5 HERE -->
-      <div>
-        <div>
-          <div>
-            <span>
-              <a href="/">Home</a>
-            </span>
-            <span>
+      <header>
+          <nav>
+            <ul>
+              <li>
+                <a href="/">Home</a>
+              </li>
+            <li>
               <a href="/about">About</a>
-            </span>
-            <span>
+            </li>
+            <li>
               <a href="/projects">Projects</a>
-            </span>
-          </div>
-        </div>
-      </div>
+            </li>
+          </ul>
+        </nav>
+      </header>
 
-      <div>
-        <div>
+      <main>
+        <section>
           <h1>Main Heading</h1>
           <p>Author.. Bio...</p>
-        </div>
-        <div>
-          <div>
+        </section>
+        <article>
+          <section>
             <h2>Sub Heading</h2>
             <div>
               <p>Lorem ipsum...</p>
             </div>
-          </div>
-          <div>
+          </section>
+          <section>
             <h2>Sub Heading</h2>
             <p>Lorem ipsum...</p>
             <div>
               <h3>Another Sub Heading</h3>
               <p>Lorem ipsum...</p>
             </div>
-          </div>
-        </div>
-	</div>
+          </section>
+        </article>
+      </main>
 
-      <div>
-        <div>
-          <div>
-            <span>
+      <footer>
+        <nav>
+          <ul>
+            <li>
               <a href="/privacy">Privacy Policy</a>
-            </span>
-            <span>
+            </li>
+            <li>
               <a href="/terms">Terms and Conditions</a>
-            </span>
-          </div>
-        </div>
+            </li>
+          </ul>
+        </footer>
 
         <div>
           <p>Powered by 🕯️</p>
           <p>&copy; TrueCoders 2021-24</p>
         </div>
-      </div>
-    </div>
-	
+    </footer>
   </body>
 </html>
